Bug 8176 - E-MU 1820m initialisation is unreliable
Summary: E-MU 1820m initialisation is unreliable
Status: CLOSED PATCH_ALREADY_AVAILABLE
Alias: None
Product: Drivers
Classification: Unclassified
Component: Sound(ALSA) (show other bugs)
Hardware: i386 Linux
: P2 normal
Assignee: James Courtier-Dutton
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2007-03-11 07:36 UTC by Nicolas Mailhot
Modified: 2007-11-15 12:17 UTC (History)
2 users (show)

See Also:
Kernel Version: up to 2.6.22-rc2
Subsystem:
Regression: ---
Bisected commit-id:


Attachments
dmesg with broken e-mu 1820m init (26.27 KB, text/plain)
2007-03-11 07:37 UTC, Nicolas Mailhot
Details
dmesg of a failed init (27.33 KB, text/plain)
2007-04-09 03:17 UTC, Nicolas Mailhot
Details
dmesg of a successful init (27.24 KB, text/plain)
2007-04-09 03:18 UTC, Nicolas Mailhot
Details

Description Nicolas Mailhot 2007-03-11 07:36:34 UTC
Most recent kernel where this bug did *NOT* occur: N/A, longstanding problem
Distribution: Fedora Devel
Hardware Environment: AMD X2 + CK804 + E-MU 1820m 
Software Environment: Init scripts
Problem Description:

Sometimes firmware loading of the E-MU 1820m audiodock fails, resulting on
broken audio system and every LED of the audiodock on (light up as normal on
init, does not light down every led but the ones in use after init)

This has been happening interminently since the alsa driver was written on all
the kernels I've used. Usually rebooting several times on the same kernel fixes
the problem

James Courtier-Dutton had requested a dmesg of a failing kernel, I had sent it
to him before but never opened a formal bug

Steps to reproduce:

Just boot and look at the pretty lights
Comment 1 Nicolas Mailhot 2007-03-11 07:37:43 UTC
Created attachment 10694 [details]
dmesg with broken e-mu 1820m init
Comment 2 Nicolas Mailhot 2007-03-27 11:19:48 UTC
still in 2.6.21-rc5-mm2
Comment 3 Nicolas Mailhot 2007-04-09 03:17:13 UTC
Created attachment 11110 [details]
dmesg of a failed init
Comment 4 Nicolas Mailhot 2007-04-09 03:18:47 UTC
Created attachment 11111 [details]
dmesg of a successful init
Comment 5 Nicolas Mailhot 2007-04-09 03:21:34 UTC
I've just uploaded 2 dmesg from the same kernel, taken at a few minutes of
interval (after a reboot). Kernel is vanilla 2.6.21-rc6-mm1 + nouveau patch
(orthogonal, had the failure way before it was available)

The first boot failed initializing the hardware the second succeeded

This is traced in the logs:

 emu1010: Card options=0x2
 emu1010: Card options=0x2
 emu1010: Card options3=0x2
+emu1010: Loading Audio Dock Firmware
+firmware size=0x133a4
+emu1010: EMU_HANA+DOCK_IRQ_STATUS=0x36
+emu1010: EMU_HANA+DOCK_ID=0x55
+emu1010: Audio Dock Firmware loaded
+Audio Dock ver:3.4
Comment 6 Nicolas Mailhot 2007-05-24 10:40:25 UTC
still occurs on current kernels
Comment 7 James Courtier-Dutton 2007-05-30 16:28:19 UTC
The correct fix to this is to implement a tasklet in the driver to monitor the
plug/unplug of the audio dock, and then load the firmware as a result.
I just have not had time to implement it.
Comment 8 Natalie Protasevich 2007-06-19 09:19:43 UTC
Any updates on the problem?
Do you think it's a good candidate for publishing as a "wanted feature" for takers?
Thanks.
Comment 9 James Courtier-Dutton 2007-07-23 10:00:29 UTC
Fix is alsa-kernel hg repository:
changeset:   5199:61295544011e
tag:         tip
user:        james
date:        Mon Jul 23 17:52:27 2007 +0100
summary:     Summary:snd-emu10k1:Improves firmware loading for E-Mu cards.


I have implemented a kthread to watch for the Audio/Microdock, and as it appears, it loads the firmware.

Please verify the fix.
Comment 10 Nicolas Mailhot 2007-07-24 00:51:39 UTC
James, tahnks a lot
I will test it ASAP. Which may not be too soon unfortunately, as I'm on the eve of leaving for summer holidays
Comment 11 James Courtier-Dutton 2007-11-08 14:41:33 UTC
Any update for this? Does it work for you now?
Comment 12 Nicolas Mailhot 2007-11-11 03:13:55 UTC
Is the patch already in 2.6.23?

I usually test alsa-kernel in mm kernels, but Andrew has not released one for a month now :(
Comment 13 Nicolas Mailhot 2007-11-15 12:17:20 UTC
Ok, Andrew released a mm kernel at last, and it's reasonnably solid (only oopses on shutdown) so I could test latest alsa-devel while chain-rebooting

The initialisation never failed, so I'll mark this as closed

Thank you very much for the fix!

Note You need to log in before you can comment on or make changes to this bug.